...
            .receive(on: RunLoop.main)
            .sink(receiveValue: { [weak self](_) in
                self?.tableView.reloadData()
            }).store(in: &cancellable)
        
        //For UI testing
        postMessageButton.accessibilityLabel = "postMessage"
    }
    
    @IBAction func allTapped(_ sender: Any) {
        messagesViewData.fetchAllMessages()
        messagesViewData.titleLabel = "ALL MESSAGES"
    }
...
